# SynoptiQ

./: .gitignore  .zenodo.json  AGENTS.md  CITATION.cff  CLAUDE.md  IMPLEMENTATION_PLAN.md  LICENSE  Makefile  PROJECT_OVERVIEW.md  README.md  SYNOPTIQ_MASTER_PLAN.md  pyproject.toml
.claude/: launch.json
configs/: bayesian.yaml  data.yaml  modal.yaml  model.yaml  training.yaml
datasets/synoptiq-corpus/: README.md
docs/: ANCIENT_GREEK_8B_PLAN.md  DIRECTION_NEGATIVE_RESULT.md  DIRECTION_SCORER_FINDINGS.md  GENERATION_PLAN.md  PAPER_PLAN.md  SOURCE_CRITICISM_STUDY.md  gospel_of_the_savior.md
modal/: app_dapt.py  app_direction.py  app_fid.py  app_koine_hexapla.py  app_koine_t5.py  app_koine_t5_omni.py
modal/legacy/: app_direction.py
paper/: main.tex  project_overview.tex  references.bib
paper_b/: main.tex  references.bib
paper_limit/: main.tex  references.bib
release/: README.md
release/hf_cards/: koine-t5-omni.md  koine-t5.md  koineformer.md  synoptiq-corpus.md
scripts/: _cli_utils.py  analyze_agreement.py  analyze_direction_signal.py  analyze_fatigue.py  analyze_polarization.py  audit_contamination.py  build_external_pairs.py  build_lxx_pairs.py  build_reader_index.py  build_redaction_corpus.py  compare_hypotheses.py  control_style_confound.py  diagnose_direction.py  direction_report.py  eval_baseline.py  eval_external_direction.py  export_hf_dataset.py  extract_direction_features.py  identifiability_check.py  pool_mai.py  prepare_data.py  prepare_koine_maxi_corpus.py  prepare_study.py  probe_nll_asymmetry.py  root_stemmata.py  run_ablation.py  run_mai_test.py  train_dapt.py  train_direction.py  train_direction_component.py  train_direction_scorer.py  train_fid.py  train_multitask.py  train_polarization.py  train_redactors.py
scripts/legacy/: analyze_direction_signal.py  analyze_fatigue.py  build_redaction_corpus.py  diagnose_direction.py  eval_external_direction.py  extract_direction_features.py  train_direction.py  train_direction_component.py
spaces/koine-reader/: README.md  app.py  requirements.txt
spaces/koine-t5-demo/: README.md  app.py  requirements.txt
synoptiq/: __init__.py  _about.py
synoptiq/bayesian/: __init__.py  rooting.py
synoptiq/data/: __init__.py  _download.py  _parse_apostolic.py  _parse_josephus.py  _parse_lxx.py  _parse_morphgnt.py  _parse_n1904.py  _parse_proiel.py  _parse_sblgnt.py  alignment.py  augmentation.py  corpus.py  external_pairs.py  frequency.py  koine_corpus.py  pericope.py  redaction.py  splits.py  study_design.py
synoptiq/direction/: __init__.py  alignment3.py  features.py  scorer.py
synoptiq/evaluation/: __init__.py  agreement.py  bootstrap.py  contamination.py  direction_baseline.py  fatigue.py  model_comparison.py  nll_direction.py  reconstruction.py  scoring.py  variants.py  verdict.py
synoptiq/legacy/: __init__.py  direction.py  direction_baseline.py  direction_training.py
synoptiq/models/: _seq2seq_base.py  direction.py  direction_mdl.py  encoder.py  fid.py  koineformer.py  polarization.py  redactor.py
synoptiq/reader/: __init__.py  gold.py  index.py  morphology.py  neural.py  parallels.py  textfabric.py
synoptiq/training/: __init__.py  _config.py  dapt.py  direction.py  multitask.py
synoptiq/utils/: __init__.py  constants.py  greek.py  io_.py  logging_.py  tokenization.py  types_.py
tests/: conftest.py  test_agreement.py  test_bootstrap.py  test_constants.py  test_dapt_decontamination.py  test_direction_classifier.py  test_direction_mdl.py  test_external_pairs.py  test_fatigue.py  test_greek.py  test_hypotheses.py  test_polarization.py  test_redaction.py  test_variants.py
tests/data/: test_alignment.py  test_corpus.py  test_koine_corpus.py  test_pericope.py  test_redaction.py  test_splits.py  test_study_design.py
tests/direction/: test_alignment3.py  test_features.py  test_scorer.py
tests/evaluation/: test_contamination.py  test_model_comparison.py  test_reconstruction.py  test_scoring.py  test_verdict.py
tests/legacy/: test_direction_classifier.py  test_redaction.py
tests/models/: test_redactor_fid.py
tests/reader/: test_gold.py  test_morphology.py  test_parallels.py  test_textfabric.py
